# mkdocs-gitlab-review

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/mkdocs_gitlab_review/: __init__.py  plugin.py  source_map.py
src/mkdocs_gitlab_review/assets/: oauth.js  review.css  review.js
tests/: test_plugin.py  test_source_map.py
